Add Edit/Update user support Skipping tests for now
Signed-off-by: Meraj<meraj.enigma@gmail.com>

--- a/sample_app/app/views/layouts/_header.html.erb
+++ b/sample_app/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
                 Account <b class="caret"></b></button>
               <div id="myDropdown" class="dropdown-content">
                      <%= link_to "Profile", current_user %>
-                    <%= link_to "Settings", '#' %>
+                    <%= link_to "Settings", edit_user_path(current_user) %>
                     <%= link_to "Log out", logout_path, method:"delete" %>
               </div>
             </div>
