--- a/sample_app/app/assets/stylesheets/custom.scss
+++ b/sample_app/app/assets/stylesheets/custom.scss
@@ -248,3 +248,11 @@ input {
        border-bottom: 1px solid $gray-lighter;
 	}
 }
+
+.button {
+    background-color: #4CAF50; /* Green */
+    color: white;
+    text-align: center;
+    font-size: 16px;
+	align: right;
+}
