--- a/sample_app/app/views/static_pages/home.html.erb
+++ b/sample_app/app/views/static_pages/home.html.erb
@@ -9,6 +9,10 @@
 			<%= render 'shared/micropost_form' %>
 		</section>
 	</div>
+	<div class="col-md-8">
+		<h3>Micropost Feed</h3>
+		<%= render 'shared/feed' %>
+ 	</div>
 <% else %>
 	<div class="center jumbotron">
   	<h1>Welcome to the Sample App</h1>
