Front-end fix: show micropost form on user profile page too
Signed-off-by: Meraj <meraj.enigma@gmail.com>

--- a/sample_app/app/views/users/show.html.erb
+++ b/sample_app/app/views/users/show.html.erb
@@ -8,6 +8,15 @@
          	</h1>
 			</section>
       </aside>
+	  <% if logged_in? %>
+	  	<div class="row">
+	  		<aside class="col-md-4">
+	  			<section class="micropost_form">
+	  			</aside>
+	  			<%= render 'shared/micropost_form' %>
+	  		</section>
+	  	</div>
+		<% end %>
 	  <div class="col-md-8">
 		  <% if @user.microposts.any? %>
 		  <h3></a>Microposts (<%= @user.microposts.count %>)</h3>
