--- a/sample_app/app/views/users/show.html.erb
+++ b/sample_app/app/views/users/show.html.erb
@@ -7,7 +7,10 @@
            		<%= @user.name %>
          	</h1>
 			</section>
-      </aside>
+			<section class="stats">
+ 				<%= render 'shared/stats' %>
+ 			</section>
+      	</aside>
 	  <% if logged_in? %>
 	  	<div class="row">
 	  		<aside class="col-md-4">
@@ -18,6 +21,7 @@
 	  	</div>
 		<% end %>
 	  <div class="col-md-8">
+		  <%= render 'follow_form' if logged_in? %>
 		  <% if @user.microposts.any? %>
 		  <h3></a>Microposts (<%= @user.microposts.count %>)</h3>
 		  <ol class="microposts">
