--- a/sample_app/app/views/microposts/_micropost.html.erb
+++ b/sample_app/app/views/microposts/_micropost.html.erb
@@ -7,8 +7,8 @@
 	 </span>
      <span class="timestamp">
           Posted <%= time_ago_in_words(micropost.created_at) %> ago.
-		  <% if current_user?(micropost.user) %>
-		  <%= button_to "delete", micropost, method: :delete, data: { confirm: "You sure?" } %>
+		  <% if current_user.id == micropost.user_id %>
+		  <%= button_to "delete", micropost, method: :delete, :class => "btn btn-danger", data: { confirm: "You sure?" } %>
         <% end %>
      </span>
 </li>
