--- a/sample_app/app/views/users/show.html.erb
+++ b/sample_app/app/views/users/show.html.erb
@@ -22,12 +22,11 @@
 		<% end %>
 	  <div class="col-md-8">
 		  <%= render 'follow_form' if logged_in? %>
-		  <% if @user.microposts.any? %>
-		  <h3></a>Microposts (<%= @user.microposts.count %>)</h3>
-		  <ol class="microposts">
-			  <%= render @microposts %>
-		  </ol>
-		  <%= will_paginate @microposts %>
+		  <% if @feed_items.any? %>
+		       <ol class="microposts">
+		         <%= render @feed_items %>
+		       </ol>
+		       <%= will_paginate @feed_items %>
 		  <% end %>
 	  </div>
 </div>
