--- a/sample_app/app/views/layouts/application.html.erb
+++ b/sample_app/app/views/layouts/application.html.erb
@@ -17,8 +17,9 @@
       <%= yield %>
       <%= render 'layouts/footer' %>
 
-         <%= debug(params) if Rails.env.development? %>
-    </div>
+  <!--       <%= debug(params) if Rails.env.development? %> -->
+   
+	 </div>
   </body>
 
 </html>
