Elastic search integration for tweet searching. Needs refactoring
Signed-off-by: Meraj <meraj.enigma@gmail.com>

--- a/sample_app/app/views/users/show.html.erb
+++ b/sample_app/app/views/users/show.html.erb
@@ -20,7 +20,15 @@
 			</aside>
 	  	</div>
 		<% end %>
-	  <div class="col-md-8">
+
+		<%= form_for :term, url: search_path, method: :get do |form| %>
+  		<p>
+    		<%= text_field_tag :term, params[:term] %>
+    		<%= submit_tag "Search", name: nil %>
+  		</p>
+		<% end %>
+
+	   <div class="col-md-8">
 		  <%= render 'follow_form' if logged_in? %>
 		  <% if @feed_items.any? %>
 		       <ol class="microposts">
