Add highlight support Refactor code
Signed-off-by: Meraj <meraj.enigma@gmail.com>

--- a/sample_app/app/assets/stylesheets/custom.scss
+++ b/sample_app/app/assets/stylesheets/custom.scss
@@ -1,6 +1,10 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+em {
+  background: yellow;
+}
+
 /* mixins, variables, etc. */
 $gray-medium-light: #eaeaea;
 
