--- a/sample_app/app/views/search/search.html.erb
+++ b/sample_app/app/views/search/search.html.erb
@@ -6,8 +6,10 @@
          <%= link_to gravatar_for(micropost.user, size: 50), micropost.user %>
          <span class="user"><%= link_to micropost.user.name, micropost.user %>
          <span class="content">
-    		 <%= micropost.content %>
-    		 <%= image_tag micropost.picture.url if micropost.picture? && micropost.picture.url? %>
+             <% micropost.highlight.content.each do |snippet| %>
+                    <p><%= snippet.html_safe %></p>
+                <% end %>
+             <%= image_tag micropost.picture.url if micropost.picture? && micropost.picture.url? %>
     	 </span>
          <span class="timestamp">
               Posted <%= time_ago_in_words(micropost.created_at) %> ago.
