--- a/sample_app/app/views/users/show.html.erb
+++ b/sample_app/app/views/users/show.html.erb
@@ -38,3 +38,18 @@
 		  <% end %>
 	  </div>
 </div>
+<script src="https://js.pusher.com/4.0/pusher.min.js"></script>
+  <script>
+
+    // Enable pusher logging - don't include this in production
+    Pusher.logToConsole = true;
+
+    var pusher = new Pusher('ce88be7709ffe9b382ea', {
+      encrypted: true
+    });
+
+    var channel = pusher.subscribe('miniTwitter-channel');
+    channel.bind("miniTwitter-" + "<%= @current_user.name %>" + "-event", function(data) {
+			alert(data.message);
+    });
+  </script>
