Convert to channel based filtering instead of event based in push notifications
Signed-off-by: Meraj <meraj.enigma@gmail.com>

--- a/sample_app/app/views/users/show.html.erb
+++ b/sample_app/app/views/users/show.html.erb
@@ -48,8 +48,8 @@
       encrypted: true
     });
 
-    var channel = pusher.subscribe('miniTwitter-channel');
-    channel.bind("miniTwitter-" + "<%= @current_user.name %>" + "-event", function(data) {
+	var channel = pusher.subscribe("miniTwitter-" + "<%= @current_user.name %>" + "-channel");
+    channel.bind("miniTwitter-event", function(data) {
 			alert(data.message);
     });
   </script>
